--- a/www/index.html
+++ b/www/index.html
@@ -86,7 +86,7 @@
                 </div>
 
                 <div class="item">
-                    <img src="image/top-gun-maverick.jpg">
+                    <img src="image/top-gun-maverick2.jpg">
                     Top Gun: Maverick <br>
                     2022
                 </div>
@@ -99,6 +99,12 @@
 
                 <div class="item">
                     <img src="image/terminator-dark-fate.jpg">
+                    Terminator Dark fate <br>
+                    2022
+                </div>
+
+                <div class="item">
+                    <img src="image/jurassic-world-le-monde-apres.jpg">
                     Terminator Dark fate <br>
                     2022
                 </div>
